# chunkr

./: .gitignore  Cargo.toml  README.md  config.toml  lychee.toml  test.toml  typos.toml
examples/: CFR-2025-title1-vol1.txt  CFR-2025-title10-vol1.part003.txt  CFR-2025-title10-vol1.part004.txt  CFR-2025-title10-vol1.txt  CFR-2025-title10-vol2.part002.txt  CFR-2025-title10-vol3.part002.txt  CFR-2025-title10-vol3.part003.txt  CFR-2025-title10-vol3.txt  CFR-2025-title10-vol4.part001.txt  CFR-2025-title10-vol5.part001.txt  CFR-2025-title10-vol5.part002.txt  CFR-2025-title10-vol5.part003.txt  CFR-2025-title10-vol5.txt  CFR-2025-title12-vol1.part001.txt  CFR-2025-title12-vol1.part002.txt  CFR-2025-title12-vol1.part003.txt  CFR-2025-title12-vol10.part001.txt  CFR-2025-title12-vol10.part003.txt  CFR-2025-title12-vol2.txt  CFR-2025-title12-vol3.part001.txt  CFR-2025-title12-vol3.part004.txt  CFR-2025-title12-vol4.part002.txt  CFR-2025-title12-vol5.part002.txt  CFR-2025-title12-vol6.part001.txt  CFR-2025-title12-vol7.part002.txt  CFR-2025-title12-vol7.part003.txt  CFR-2025-title12-vol7.txt  CFR-2025-title12-vol8.part001.txt  CFR-2025-title12-vol8.part002.txt  CFR-2025-title12-vol9.part001.txt  CFR-2025-title12-vol9.part002.txt  CFR-2025-title12-vol9.part003.txt  CFR-2025-title12-vol9.part004.txt  CFR-2025-title12-vol9.txt  CFR-2025-title13-vol1.part001.txt  CFR-2025-title13-vol1.part002.txt  CFR-2025-title13-vol1.txt  CFR-2025-title14-vol1.part002.txt  CFR-2025-title14-vol1.part003.txt  CFR-2025-title14-vol3.part002.txt  (+233 more)
new-project/: Chunkr Dedup Command Checkpoint.md  (+12 more)
(+295 files in other folders)
