[package]
name = "chunkr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
blake3 = "1.3.2"
clap = { version = "4.5.55", features = ["derive"] }
rayon = "1.7.0"
quick-xml = "0.39.0"
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-normalization = "0.1.25"
uuid = { version = "1.20.0", features = ["v4"] }
walkdir = "2.5.0"
